--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "bun build/index.js",
     "dev": "vite",
     "test": "bun test",
-    "test:watch": "bun test --watch"
+    "test:watch": "bun test --watch",
+    "format": "prettier --write \"src/**/*.{ts,js,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,js,json}\""
   },
   "keywords": [
     "mcp",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^24.0.3",
     "bun-types": "^1.2.12",
+    "prettier": "^3.6.2",
     "vite": "^6.3.5",
     "vite-plugin-dts": "^4.5.3"
   }
